Fixes alignment issue with flex-basis in Stack component

--- a/src/Stack/Stack.scss
+++ b/src/Stack/Stack.scss
@@ -7,11 +7,14 @@
         font-size: 40px;
     }
     
-    .logos i{ 
+    .logos i { 
         padding: 8px;
     }
     
-    .section .second.tile {
+    .second.tile {
         align-items: flex-start;
+    }
+    .back {
+        flex-basis: 25%;
     }
 }
